Avoid word wrap in copyright section.

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -540,7 +540,7 @@ html[lang=ja] footer.v2-section--footer {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 0 32px 0 32px;
+      margin: 0;
       height: 60px;
       color: #6e7780;
       font-size: 12px;
